rewrite response & update swagger
