# docs/swagger.yaml
@@ -229,9 +229,11 @@ paths:
         200:
           description: OK
           schema:
-            type: array
-            items:
-              $ref: "#/definitions/VideoResponseItem"
+            properties:
+              meta:
+                $ref: "#/definitions/SuccessResponse"
+              data:
+                $ref: "#/definitions/VideosResponseItem"
         204:
           description: No Content
         500:
@@ -804,6 +806,23 @@ definitions:
       url:
         type: string
         example: https://www.youtube.com/embed/80AjI0hlbf8
+
+  VideosResponseItem:
+    type: object
+    properties:
+      offset:
+        type: integer
+        example: 0
+      limit:
+        type: integer
+        example: 10
+      total_data:
+        type: integer
+        example: 1
+      videos:
+        type: array
+        items:
+          $ref: "#/definitions/VideoResponseItem"
 
   ArticleItem:
     type: object
